# tryzub

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB.md  LICENSE  PLAN_PRO.md  README.md  __тест_тризуб.txt  build-and-test.bat  create-release.bat  create-release.sh  package.json  setup.bat  setup.sh  test.bat  ВИКОРИСТАННЯ.md  ЗАВЕРШЕНО.md  СТАТУС.md  ТЕСТУВАННЯ.md  ФІНАЛ.md  приклад.db
.claude/: launch.json
.github/workflows/: ci.yml  pages.yml
docs/: index.html  install.ps1  install.sh  playground.html
editors/vscode/: README.md  extension.js  language-configuration.json  package.json
editors/vscode/snippets/: tryzub.json
editors/vscode/syntaxes/: tryzub.tmLanguage.json
examples/: fibonacci.tryzub  pattern_matching.тризуб  v3_інновації.тризуб  асинхронність.тризуб  база_даних.тризуб  банк.тризуб  бенчмарк_cranelift.тризуб  бенчмарк_сума.тризуб  бенчмарки.тризуб  веб_повний.тризуб  веб_сервер.тризуб  генерики.тризуб  модулі.тризуб  мій_перший_код.тризуб  паралельність.тризуб  привіт_світ.тризуб  сервер.тризуб  системне.тризуб  сучасний_тризуб.тризуб  тест.тризуб  тест_v2.тризуб  тест_модулі.тризуб  тести_мови.тризуб  тип_система.тризуб  трейти_блок4.тризуб  трейти_оператори.тризуб  трейти_та_поліморфізм.тризуб  тризубос.тризуб  функціональне.тризуб  ядро.тризуб  ітератори.тризуб
examples/сайт/: головна.html  про.html  сайт.тризуб
examples/сайт/статичні/css/: стиль.css
src/: cranelift_aot.rs  cranelift_backend.rs  lib.rs  main.rs
src/compiler/: Cargo.toml  lib.rs  mod.rs
src/lexer/: Cargo.toml  lib.rs  mod.rs
src/parser/: Cargo.toml  lib.rs  mod.rs
src/runtime/: Cargo.toml  lib.rs  mod.rs
src/vm/: Cargo.toml  bytecode.rs  compiler.rs  jit.rs  lib.rs  mod.rs  native.rs
stdlib/: json.тризуб  випадкове.тризуб  журнал.тризуб  колекції.тризуб  математика.тризуб  мережа.тризуб  ос.тризуб  рядки.тризуб  серіалізація.тризуб  система.тризуб  тестування.тризуб  файли.тризуб  час.тризуб
stdlib/ядро/: безпека.тризуб  віртуалізація.тризуб  персистентність.тризуб  планувальник.тризуб  інтерфейс.тризуб
tests/: integration_tests.rs
