[package]
name = "tryzub"
version = "4.1.0"
edition = "2021"
authors = ["*******"]
description = "Тризуб — сучасна українська мова програмування"
repository = "https://github.com/Evge14n/tryzub"
license = "MIT"
readme = "README.md"
keywords = ["programming-language", "ukrainian", "compiler"]
categories = ["compilers", "development-tools"]

[workspace]
members = [
    "src/lexer",
    "src/parser",
    "src/vm",
]

[features]
default = []
llvm = ["dep:tryzub-compiler", "dep:tryzub-runtime", "dep:inkwell", "dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native", "dep:target-lexicon"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = "0.4"

# Core modules (always included)
tryzub-lexer = { path = "src/lexer" }
tryzub-parser = { path = "src/parser" }
tryzub-vm = { path = "src/vm" }

# Optional: LLVM native compilation
tryzub-compiler = { path = "src/compiler", optional = true }
tryzub-runtime = { path = "src/runtime", optional = true }
inkwell = { version = "0.2.0", features = ["llvm15-0"], optional = true }
cranelift = { version = "0.95", optional = true }
cranelift-module = { version = "0.95", optional = true }
cranelift-jit = { version = "0.95", optional = true }
cranelift-native = { version = "0.95", optional = true }
target-lexicon = { version = "0.12", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "tryzub"
path = "src/main.rs"
