[package]
name = "tryzub-lexer"
version = "9.0.0"
edition = "2021"
description = "Lexer for the Tryzub programming language (Ukrainian syntax)"
license = "MIT"
repository = "https://github.com/Evge14n/tryzub"
homepage = "https://github.com/Evge14n/tryzub"
keywords = ["tryzub", "lexer", "ukrainian", "programming-language"]
categories = ["compilers", "parser-implementations"]

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
unicode-segmentation = "1.10"
