[package]
name = "tryzub-vm"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tryzub-lexer = { path = "../lexer" }
tryzub-parser = { path = "../parser" }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tungstenite = "0.24"
flate2 = "1.0"
regex = "1.10"
ureq = "2.9"
md-5 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
serialport = "4.3"
