[package]
name = "tryzub-vm"
version = "9.0.0"
edition = "2021"
description = "Virtual machine for the Tryzub programming language"
license = "MIT"
repository = "https://github.com/Evge14n/tryzub"
homepage = "https://github.com/Evge14n/tryzub"
keywords = ["tryzub", "vm", "interpreter", "programming-language"]
categories = ["compilers"]

[lib]
path = "lib.rs"

[dependencies]
tryzub-lexer = { path = "../lexer" }
tryzub-parser = { path = "../parser" }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tungstenite = "0.24"
flate2 = "1.0"
regex = "1.10"
ureq = "2.9"
md-5 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
serialport = { version = "4.3", optional = true }
image = { version = "0.25", optional = true }
libloading = "0.8"

[features]
default = ["hardware", "imaging"]
hardware = ["serialport"]
imaging = ["image"]
